fix bug with z-index

--- a/assets/styles/app_mobile.css
+++ b/assets/styles/app_mobile.css
@@ -1369,6 +1369,7 @@ section .title {
     top: 0;
     left: 0;
     display: none;
+    z-index: 2;
 }
 
 #product-preview-mobile #background {
